Multimodule stuff before going kotin